# mcp-py-repl

./: CLAUDE_DESKTOP_CONFIG.md  Dockerfile  README.md  SETUP_CLAUDE.md  docker-push.sh  pyproject.toml
src/sherlog_repl/: __init__.py  __main__.py  server.py
src/sherlog_repl/connectors/: __init__.py  base.py  filesystem.py  github.py  jira.py
src/sherlog_repl/proxy/: __init__.py  generator.py
src/sherlog_repl/session/: __init__.py  manager.py
src/sherlog_repl/utils/: __init__.py  concurrency.py
